[gd_scene load_steps=2 format=2]

[ext_resource path="res://hud/HUD.gd" type="Script" id=1]

[node name="HUD" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 202.043
margin_top = 37.0413
margin_right = 243.043
margin_bottom = 57.0413
text = "Start"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LevelEndLabel" type="Label" parent="."]
margin_left = 137.0
margin_top = 327.0
margin_right = 317.0
margin_bottom = 377.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ReturnToMenuButton" type="Button" parent="."]
margin_left = 152.172
margin_top = 403.122
margin_right = 298.172
margin_bottom = 423.122
text = "Return to Main Menu"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RetryLevelButton" type="Button" parent="."]
margin_left = 196.221
margin_top = 437.827
margin_right = 241.221
margin_bottom = 457.827
text = "Retry"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ReturnToMenuButton" to="." method="_on_ReturnToMenuButton_pressed"]
[connection signal="pressed" from="RetryLevelButton" to="." method="_on_RetryLevelButton_pressed"]
